schema: Define JSON schema for taxonomy yaml
We use JSON Schema which has broad support including in vscode. This PR
includes the schema for compositional skills (without attribution) as
well as prototype schema for knowledge and metadata. The check yaml
script is changed to use the check-jsonschema command to validate
the compositional skill qna.yaml files against the schema.

Signed-off-by: BJ Hargrave <hargrave@us.ibm.com>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -66,6 +66,7 @@ jobs:
       - name: "Check file contents"
         if: steps.changed-files.outputs.any_changed == 'true'
         run: |
+          pip install check-jsonschema
           echo "::add-matcher::.github/workflows/matchers/lint.json"
           echo
           .github/scripts/check-yaml.sh "${{ steps.changed-files.outputs.all_changed_files }}"
