--- a/compositional_skills/writing/freeform/fun_facts/qna.yaml
+++ b/compositional_skills/writing/freeform/fun_facts/qna.yaml
@@ -19,8 +19,9 @@ seed_examples:
       - Teeth are the only part of the human body that can not heal themselves.
       - The liver is the superhero of the human body as it can regenerate itself.
       A liver can regrow to a normal size even after 90% of it has been removed.
-      - Babies have more bones, humans have 206 bones but they have 300 bones when they are born,
-      many of these bones fuse together when we grow older and taller, resulting in 206 bones in adults.
+      - Babies have more bones than adults. Fully developed humans have 206 bones,
+      but they have 300 bones when they are born. Many of these bones fuse together when we grow older and taller,
+      resulting in 206 bones in the adult human body.
       - Humans can glow in the dark but the light they emit is 1000 times weaker than the human eye can detect.
       - The Cornea is the only part of the human body that has no blood supply and it gets oxygen directly through air.
     attribution:
