--- a/compositional_skills/writing/freeform/jokes/puns/techjokes/qna.yaml
+++ b/compositional_skills/writing/freeform/jokes/puns/techjokes/qna.yaml
@@ -21,3 +21,6 @@ seed_examples:
   - question: How many kinds of people are in this world?
     answer: |
       10. Those who know binary and those who don't.
+attribution:
+      - source: public domain
+        license: Apache-2.0
