--- a/compositional_skills/writing/freeform/jokes/puns/techjokes/qna.yaml
+++ b/compositional_skills/writing/freeform/jokes/puns/techjokes/qna.yaml
@@ -5,6 +5,9 @@ seed_examples:
   - question: Why did the developer go broke?
     answer: |
       Because he used up all his cache
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
   - question: |
       His Mom sends the developer to the grocery store, saying: 'Bring bread, and if they have eggs, ten.'
       After a while the developer returns without any eggs, carrying ten loaves of bread.
@@ -12,15 +15,24 @@ seed_examples:
       What does the developer answer?
     answer: |
       'They had eggs.'
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
   - question: Why do submarines all run Linux?
     answer: |
       Because you can't open Windows under water.
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
   - question: How many programmers does it take to change a light bulb?
     answer: |
       None. It's a hardware problem.
+    attribution:
+      - source: self-authored
+        license: Apache-2.0
   - question: How many kinds of people are in this world?
     answer: |
       10. Those who know binary and those who don't.
-attribution:
-      - source: public domain
+    attribution:
+      - source: self-authored
         license: Apache-2.0
